what am i doing?

--- a/assets/css/crystals.css
+++ b/assets/css/crystals.css
@@ -1,6 +1,6 @@
 /* I borrowed some css for the crystals bc I still suck at css! and coding in general... don't hate me 
 shout out to: https://codepen.io/karadi/pen/dvoPaP */
-.diamond {
+.button{
     width: 90px;
     height: 90px;
     background: #1eff00;
